[package]
name = "drive"
version = "0.1.0"
edition = "2024"

[dependencies]
chrono = "0.4.42"
clap = { version = "4.5.51", features = ["derive"] }
drive_macros = { version = "0.1.0", path = "../drive-macros" }
pest = "2.8.3"
pest_derive = "2.8.3"
uom = "0.37.0"

[dev-dependencies]
assert_fs = "1.1.3"
galvanic-assert = "0.8.7"
pretty_assertions = "1.4.1"
static_assertions = "1.1.0"

[build-dependencies]
drive_macros = { version = "0.1.0", path = "../drive-macros" }
