[package]
name = "drive"
version = "0.1.0"
edition = "2024"

[dependencies]
bson = { version = "3.1.0", features = ["chrono-0_4", "uuid-1", "time-0_3", "serde_with-3", "serde_json-1"] }
bzip2 = "0.6.1"
chrono = "0.4.42"
clap = { version = "4.5.51", features = ["derive"] }
drive_macros = { version = "0.1.0", path = "../drive-macros" }
flate2 = "1.1.9"
md5 = "0.8.0"
pest = "2.8.3"
pest_derive = "2.8.3"
redb = "3.1.1"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
slint = "1.15.1"
snap = "1.1.1"
time = "0.3.47"
uom = "0.37.0"
uuid = { version = "1.22.0", features = ["v4"] }
vulkano = "0.35.2"

[dev-dependencies]
assert_fs = "1.1.3"
galvanic-assert = "0.8.7"
pretty_assertions = "1.4.1"
static_assertions = "1.1.0"

[build-dependencies]
drive_macros = { version = "0.1.0", path = "../drive-macros" }
slint-build = "1.15.1"
